--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,1 +1,9 @@
-<h1>Hello</h1>
+<h1>New Game</h1>
+
+<div id="letter-container">
+  <% @letters.each do |letter| %>
+    <div class="letter">
+      <%= letter %>
+    </div>
+  <% end %>
+</div>
