--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,9 +1,20 @@
 <h1>New Game</h1>
 
-<div id="letter-container">
+<div id="letter-container" class="row">
   <% @letters.each do |letter| %>
     <div class="letter">
       <%= letter %>
     </div>
   <% end %>
 </div>
+
+<form method="post" action="/score">
+  <div class="form-group">
+    <label for="word">Please enter the longest word you can find</label>
+    <input class="form-control" type="text" name="word" id="word">
+  </div>
+  <input class="btn btn-primary" type="submit" value="Submit">
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+  <%= hidden_field_tag :letters, @letters %>
+</form>
+
