--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -1,3 +1,3 @@
-<% if @error %>
+<% unless @word_in_grid %>
   <p> Sorry but "<%= @word %>" cannot be built out of <%= @letters.join(", ") %> </p>
 <% end %>
