--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -8,12 +8,13 @@
   <% end %>
 </div>
 
-<form method="post" action="/score">
-  <div class="form-group">
-    <label for="word">Please enter the longest word you can find</label>
-    <input class="form-control" type="text" name="word" id="word" required>
+<form class="mt-5" method="post" action="/score">
+  <label for="word">Please enter the longest word you can find</label> <br>
+  <div class="form-group form-inline">
+    <input class="form-control no-border" type="text" name="word" id="word" required>
+    <input class="btn btn-primary no-border" type="submit" value="Submit">
   </div>
-  <input class="btn btn-primary" type="submit" value="Submit">
+  
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <%= hidden_field_tag :letters, @letters %>
 </form>
